# Car-Listing-ELT-Analytics

./: README.md  db_management.py  docker-compose.yml  pyproject.toml  requirements.txt
.dlt/: secrets.toml
car-listing-project/: README.md  pyproject.toml  setup.cfg  setup.py
car-listing-project/car_listing_project/: __init__.py  assets.py  definitions.py  project.py  sql_database_pipeline.py
car-listing-project/car_listing_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
car-listing-project/tmpr8zslgwq/history/: runs.db
car-listing-project/tmpr8zslgwq/history/runs/: index.db
car-listing-project/tmpr8zslgwq/schedules/: schedules.db
car-listing-project/tmpznlp3s0_/history/: runs.db
car-listing-project/tmpznlp3s0_/history/runs/: 03418f27-a15c-4527-9291-08ed909e6fdd.db  11631121-2304-414e-9892-746d7fe48406.db  4e193a02-f2a3-4b93-8852-b84679b552ce.db  64e98a30-3c18-4981-a34e-5beef40a5c35.db  7620c9eb-1ee1-4ac4-bcc0-e5738f30fa28.db  deac3bc5-0b07-4786-9b9d-a0a7cf86912d.db  e313426c-f968-4f37-893d-0beaa7236f19.db  f023124b-76cd-479f-8197-9c9cc8d1c868.db  f6452cd9-c466-4c78-a4f2-51f64a0d0af2.db  index.db
car-listing-project/tmpznlp3s0_/schedules/: schedules.db
car-listing-project/tmpznlp3s0_/storage/03418f27-a15c-4527-9291-08ed909e6fdd/compute_logs/: pqpazujo.err  pqpazujo.out
car-listing-project/tmpznlp3s0_/storage/11631121-2304-414e-9892-746d7fe48406/compute_logs/: jxqwlfgc.err  jxqwlfgc.out
car-listing-project/tmpznlp3s0_/storage/4e193a02-f2a3-4b93-8852-b84679b552ce/compute_logs/: jigujroq.err  jigujroq.out
car-listing-project/tmpznlp3s0_/storage/64e98a30-3c18-4981-a34e-5beef40a5c35/compute_logs/: ghvhgjpz.err
(+45 files in other folders)
